Fix lego select label text

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
       <!--lego books-->
       <div class="cat-selection">
-        <label class="cat-select-label" for="child"><input type="checkbox" class="cat-select-check">Lego Books<span>&#174</span></label>
+        <label class="cat-select-label" for="child"><input type="checkbox" class="cat-select-check">LEGO<span class="registered-symbol">&#174 </span>Books</label>
         <img src="img/bitmap-copy-20.png"
           srcset="img/bitmap-copy-20@2x.png 2x,
              img/bitmap-copy-20@3x.png 3x"
