Add signup form

--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@
     </div>
     <!-----------end of extra categories------------>
       <button class="show-all-button" id="extraCategories">Show all categories<span></span></button>
+      <div class="newsletter-signup" id="newsletterSignup">
+        <p>Join our newsletter so we can send you book recommendations</p>
+        <form>
+          <input type="text" class="signup-input" placeholder="First name">
+          <input type="text" class="signup-input" placeholder="Last name">
+          <input type="text" class="signup-input" placeholder="Your email address">
+          <button>Subscribe</button>
+          <label class=""><input type="checkbox">I agree to the<span> Privacy Policy </span>and I am over 16 years of age</span></label>
+        </form>
+      </div>
     </div>
   </main>
   <script src="main.js"></script>
