Fix input placeholder padding

--- a/index.html
+++ b/index.html
@@ -114,12 +114,13 @@
     </div>
     <!-----------end of extra categories------------>
       <button class="show-all-button" id="extraCategories">Show all categories<span></span></button>
+      <!----------newsletter signup form------------>
       <div class="newsletter-signup" id="newsletterSignup">
         <p>Join our newsletter so we can send you book recommendations</p>
         <form>
-          <input type="text" class="signup-input" placeholder="First name">
-          <input type="text" class="signup-input" placeholder="Last name">
-          <input type="text" class="signup-input" placeholder="Your email address">
+          <input type="text" class="signup-input" placeholder="First name &#42" required>
+          <input type="text" class="signup-input" placeholder="Last name &#42" required>
+          <input type="text" class="signup-input" placeholder="Your email address &#42" required>
           <button>Subscribe</button>
           <label class=""><input type="checkbox">I agree to the<span> Privacy Policy </span>and I am over 16 years of age</span></label>
         </form>
