Remove show all categories button class

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
     </div>
     <!-----------end of extra categories------------>
-      <button class="show-all-button" id="extraCategories">Show all categories<span></span></button>
+      <button id="extraCategories">Show all categories<span></span></button>
       <!----------newsletter signup form------------>
       <div class="newsletter-signup" id="newsletterSignup">
         <p>Join our newsletter so we can send you book recommendations</p>
@@ -122,7 +122,7 @@
           <input type="text" class="signup-input" placeholder="Last name &#42" required>
           <input type="text" class="signup-input" placeholder="Your email address &#42" required>
           <button>Subscribe</button>
-          <label class=""><input type="checkbox">I agree to the<span> Privacy Policy </span>and I am over 16 years of age</span></label>
+          <label class=""><input type="checkbox">I agree to the<span class="privacy-policy"> Privacy Policy </span>and I am over 16 years of age</span></label>
         </form>
       </div>
     </div>
