--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="cat-select-container">
       <!---------------children's------------------>
       <div class="cat-selection">
-        <label class="cat-select-label" for="child">
-          <input type="checkbox" class="cat-select-check" name="childrens">Children's
+        <label class="cat-select-label" for="childrens">
+          <input type="checkbox" class="cat-select-check" id="childrens" name="childrens">Children's
         </label>
         <img src="img/bitmap-copy-2.jpg"
           srcset="img/bitmap-copy-2@2x.jpg 2x,
@@ -25,7 +25,9 @@
       </div>
       <!---------------crafts & hobbies-------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="child"><input type="checkbox" class="cat-select-check" name="craft&hobbies">Crafts & Hobbies</label>
+        <label class="cat-select-label" for="craftHobbies">
+          <input type="checkbox" class="cat-select-check" id="craftHobbies" name="craft&hobbies">Crafts & Hobbies
+        </label>
         <img src="img/bitmap-copy-9.jpg"
           srcset="img/bitmap-copy-9@2x.jpg 2x,
              img/bitmap-copy-9@3x.jpg 3x"
@@ -33,8 +35,8 @@
       </div>
       <!-------------education & teachers---------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="child">
-          <input type="checkbox" class="cat-select-check" name="education&teachers">Education & Teachers
+        <label class="cat-select-label" for="educationTeachers">
+          <input type="checkbox" class="cat-select-check" id="educationTeachers" name="education&teachers">Education & Teachers
         </label>
         <img src="img/bitmap-copy-7.jpg"
           srcset="img/bitmap-copy-7@2x.jpg 2x,
@@ -45,8 +47,8 @@
     <div class="extra-cat" id="extraCatContainer">
       <!---------------food & drink---------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="child">
-          <input type="checkbox" class="cat-select-check" name="food&drink">Food & Drink
+        <label class="cat-select-label" for="foodDrink">
+          <input type="checkbox" class="cat-select-check" id="foodDrink" name="food&drink">Food & Drink
         </label>
         <img src="img/bitmap-copy-18.jpg"
           srcset="img/bitmap-copy-18@2x.jpg 2x,
@@ -55,8 +57,8 @@
       </div>
       <!-----------------gardening----------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="child">
-          <input type="checkbox" class="cat-select-check" name="gardening">Gardening
+        <label class="cat-select-label" for="gardening">
+          <input type="checkbox" class="cat-select-check" id="gardening" name="gardening">Gardening
         </label>
         <img src="img/bitmap-copy-21.jpg"
           srcset="img/bitmap-copy-21@2x.jpg 2x,
@@ -65,8 +67,8 @@
       </div>
       <!---------------health & fitness-------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="child">
-          <input type="checkbox" class="cat-select-check" name="health&fitness">Health & Fitness
+        <label class="cat-select-label" for="healthFitness">
+          <input type="checkbox" class="cat-select-check" id="healthFitness" name="health&fitness">Health & Fitness
         </label>
         <img src="img/bitmap-copy-15.jpg"
           srcset="img/bitmap-copy-15@2x.jpg 2x,
@@ -75,8 +77,8 @@
       </div>
       <!--------------history & reference-------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="child">
-          <input type="checkbox" class="cat-select-check" name="history&reference">History & Reference
+        <label class="cat-select-label" for="history">
+          <input type="checkbox" class="cat-select-check" id="history" name="history&reference">History & Reference
         </label>
         <img src="img/bitmap-copy-17.jpg"
           srcset="img/bitmap-copy-17@2x.jpg 2x,
@@ -85,8 +87,8 @@
       </div>
       <!----------------lego books------------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="child">
-          <input type="checkbox" class="cat-select-check" name="lego">LEGO<span class="registered-symbol">&#174 </span>Books
+        <label class="cat-select-label" for="lego">
+          <input type="checkbox" class="cat-select-check" id="lego" name="lego">LEGO<span class="registered-symbol">&#174 </span>Books
         </label>
         <img src="img/bitmap-copy-20.png"
           srcset="img/bitmap-copy-20@2x.png 2x,
@@ -95,8 +97,8 @@
       </div>
       <!------------------marvel-------------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="child">
-          <input type="checkbox" class="cat-select-check" name="marvel">Marvel
+        <label class="cat-select-label" for="marvel">
+          <input type="checkbox" class="cat-select-check" id="marvel" name="marvel">Marvel
         </label>
         <img src="img/bitmap-copy-14.png"
           srcset="img/bitmap-copy-14@2x.png 2x,
@@ -105,8 +107,8 @@
       </div>
       <!----------pregnancy & parenting----------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="child">
-          <input type="checkbox" class="cat-select-check" name="pregnancy&parenting">Pregnancy & Parenting
+        <label class="cat-select-label" for="pregnancyParenting">
+          <input type="checkbox" class="cat-select-check" id="pregnancyParenting" name="pregnancy&parenting">Pregnancy & Parenting
         </label>
         <img src="img/bitmap-copy-19.jpg"
           srcset="img/bitmap-copy-19@2x.jpg 2x,
@@ -115,8 +117,8 @@
       </div>
       <!----------------star wars---------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="child">
-          <input type="checkbox" class="cat-select-check" name="star-wars">Star Wars<span>&#8482</span>
+        <label class="cat-select-label" for="starWars">
+          <input type="checkbox" class="cat-select-check" id="starWars" name="star-wars">Star Wars<span>&#8482</span>
         </label>
         <img src="img/bitmap-copy-22.jpg"
           srcset="img/bitmap-copy-22@2x.jpg 2x,
@@ -125,8 +127,8 @@
       </div>
       <!----------------travel------------------>
       <div class="cat-selection">
-        <label class="cat-select-label" for="child">
-          <input type="checkbox" class="cat-select-check" name="travel">Travel
+        <label class="cat-select-label" for="travel">
+          <input type="checkbox" class="cat-select-check" id="travel" name="travel">Travel
         </label>
         <img src="img/bitmap-copy-16.jpg"
           srcset="img/bitmap-copy-16@2x.jpg 2x,
