Add user category selection check functionality

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
           class="Bitmap-Copy-16">
       </div>
     </div>
+    <div id="catSelectError"></div>
     <!-----------end of extra categories------------>
       <button id="extraCategories">Show all categories<span></span></button>
       <!----------newsletter signup form------------>
@@ -145,7 +146,7 @@
           <input type="text" class="signup-input" placeholder="First name &#42" name="firstName" required>
           <input type="text" class="signup-input" placeholder="Last name &#42"  name="lastName" required>
           <input type="email" class="signup-input" placeholder="Your email address &#42" name="email" required>
-          <button>Subscribe</button>
+          <button id="subscribe">Subscribe</button>
           <div class="privacy-policy-wrapper">
             <input type="checkbox" id="privacyPolicy"><p>I agree to the <a class="privacy-policy">Privacy Policy</a> and I am over 16 years of age</label>
           </div>
