Add error message to HTML

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           class="Bitmap-Copy-16">
       </div>
     </div>
-    <div id="catSelectError"></div>
+    <p class="err-message" id="catSelectErr">Please select at least one category above</p>
     <!-----------end of extra categories------------>
       <button id="extraCategories">Show all categories<span></span></button>
       <!----------newsletter signup form------------>
