Add privacy policy error message hidden by default

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
           <div class="privacy-policy-wrapper">
             <input type="checkbox" id="privacyPolicy"><p>I agree to the <a class="privacy-policy">Privacy Policy</a> and I am over 16 years of age</label>
           </div>
+          <p class="err-message" id="privacyPolicyErr">Please agree to the privacy policy and minimum age</p>
         </form>
       </div>
     </div>
