Add success page

--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@
       </div>
     </div>
   </main>
+  <div class="signup-success" id="signupSuccess">
+    <h1>Success!</h1>
+    <h2>Thank you for signing up to our newsletter.</h2>
+    <img src="img/bitmap.png"
+     srcset="img/bitmap@2x.png 2x,
+             img/bitmap@3x.png 3x"
+     class="success-img">
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
