Refactor form validity

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
              img/bitmap@3x.png 3x"
      class="success-img">
   </div>
-  <script src="main.js"></script>
+  <script src="form.js"></script>
+  <!-- <script src="main.js"></script> -->
 </body>
 </html>
