Refactor code to call less functions

--- a/index.html
+++ b/index.html
@@ -166,7 +166,6 @@
              img/bitmap@3x.png 3x"
      class="success-img">
   </div>
-  <script src="form.js"></script>
-  <!-- <script src="main.js"></script> -->
+  <script src="main.js"></script>
 </body>
 </html>
