Add custom checkbox styles

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <div class="cat-select-container">
       <!---------------children's------------------>
       <div class="cat-selection">
-        <label class="cat-select-label" for="childrens">
-          <input type="checkbox" class="cat-select-check" id="childrens" name="childrens">Children's
+        <label for="childrens">
+          <input type="checkbox" class="cat-select-check" id="childrens" name="childrens">
+          <span>Children's</span>
         </label>
         <img src="img/bitmap-copy-2.jpg"
           srcset="img/bitmap-copy-2@2x.jpg 2x,
@@ -25,8 +26,9 @@
       </div>
       <!---------------crafts & hobbies-------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="craftHobbies">
-          <input type="checkbox" class="cat-select-check" id="craftHobbies" name="craft&hobbies">Crafts & Hobbies
+        <label for="craftHobbies">
+          <input type="checkbox" class="cat-select-check" id="craftHobbies" name="craft&hobbies">
+          <span>Crafts & Hobbies</span>
         </label>
         <img src="img/bitmap-copy-9.jpg"
           srcset="img/bitmap-copy-9@2x.jpg 2x,
@@ -35,8 +37,9 @@
       </div>
       <!-------------education & teachers---------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="educationTeachers">
-          <input type="checkbox" class="cat-select-check" id="educationTeachers" name="education&teachers">Education & Teachers
+        <label for="educationTeachers">
+          <input type="checkbox" class="cat-select-check" id="educationTeachers" name="education&teachers">
+          <span>Education & Teachers</span>
         </label>
         <img src="img/bitmap-copy-7.jpg"
           srcset="img/bitmap-copy-7@2x.jpg 2x,
@@ -47,8 +50,9 @@
     <div class="extra-cat" id="extraCatContainer">
       <!---------------food & drink---------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="foodDrink">
-          <input type="checkbox" class="cat-select-check" id="foodDrink" name="food&drink">Food & Drink
+        <label for="foodDrink">
+          <input type="checkbox" class="cat-select-check" id="foodDrink" name="food&drink">
+          <span>Food & Drink</span>
         </label>
         <img src="img/bitmap-copy-18.jpg"
           srcset="img/bitmap-copy-18@2x.jpg 2x,
@@ -57,8 +61,9 @@
       </div>
       <!-----------------gardening----------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="gardening">
-          <input type="checkbox" class="cat-select-check" id="gardening" name="gardening">Gardening
+        <label for="gardening">
+          <input type="checkbox" class="cat-select-check" id="gardening" name="gardening">
+          <span>Gardening</span>
         </label>
         <img src="img/bitmap-copy-21.jpg"
           srcset="img/bitmap-copy-21@2x.jpg 2x,
@@ -67,8 +72,9 @@
       </div>
       <!---------------health & fitness-------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="healthFitness">
-          <input type="checkbox" class="cat-select-check" id="healthFitness" name="health&fitness">Health & Fitness
+        <label for="healthFitness">
+          <input type="checkbox" class="cat-select-check" id="healthFitness" name="health&fitness">
+          <span>Health & Fitness</span>
         </label>
         <img src="img/bitmap-copy-15.jpg"
           srcset="img/bitmap-copy-15@2x.jpg 2x,
@@ -77,8 +83,9 @@
       </div>
       <!--------------history & reference-------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="history">
-          <input type="checkbox" class="cat-select-check" id="history" name="history&reference">History & Reference
+        <label for="history">
+          <input type="checkbox" class="cat-select-check" id="history" name="history&reference">
+          <span>History & Reference</span>
         </label>
         <img src="img/bitmap-copy-17.jpg"
           srcset="img/bitmap-copy-17@2x.jpg 2x,
@@ -87,8 +94,9 @@
       </div>
       <!----------------lego books------------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="lego">
-          <input type="checkbox" class="cat-select-check" id="lego" name="lego">LEGO<span class="registered-symbol">&#174 </span>Books
+        <label for="lego">
+          <input type="checkbox" class="cat-select-check" id="lego" name="lego">
+          <span>LEGO&reg Books</span>
         </label>
         <img src="img/bitmap-copy-20.png"
           srcset="img/bitmap-copy-20@2x.png 2x,
@@ -97,8 +105,9 @@
       </div>
       <!------------------marvel-------------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="marvel">
-          <input type="checkbox" class="cat-select-check" id="marvel" name="marvel">Marvel
+        <label for="marvel">
+          <input type="checkbox" class="cat-select-check" id="marvel" name="marvel">
+          <span>Marvel</span>
         </label>
         <img src="img/bitmap-copy-14.png"
           srcset="img/bitmap-copy-14@2x.png 2x,
@@ -107,8 +116,9 @@
       </div>
       <!----------pregnancy & parenting----------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="pregnancyParenting">
-          <input type="checkbox" class="cat-select-check" id="pregnancyParenting" name="pregnancy&parenting">Pregnancy & Parenting
+        <label for="pregnancyParenting">
+          <input type="checkbox" class="cat-select-check" id="pregnancyParenting" name="pregnancy&parenting">
+          <span>Pregnancy & Parenting</span>
         </label>
         <img src="img/bitmap-copy-19.jpg"
           srcset="img/bitmap-copy-19@2x.jpg 2x,
@@ -117,8 +127,9 @@
       </div>
       <!----------------star wars---------------->
       <div class="cat-selection">
-        <label class="cat-select-label" for="starWars">
-          <input type="checkbox" class="cat-select-check" id="starWars" name="star-wars">Star Wars<span>&#8482</span>
+        <label for="starWars">
+          <input type="checkbox" class="cat-select-check" id="starWars" name="star-wars">
+          <span>Star Wars&#8482</span>
         </label>
         <img src="img/bitmap-copy-22.jpg"
           srcset="img/bitmap-copy-22@2x.jpg 2x,
@@ -127,8 +138,9 @@
       </div>
       <!----------------travel------------------>
       <div class="cat-selection">
-        <label class="cat-select-label" for="travel">
-          <input type="checkbox" class="cat-select-check" id="travel" name="travel">Travel
+        <label for="travel">
+          <input type="checkbox" class="cat-select-check" id="travel" name="travel">
+          <span>Travel</span>
         </label>
         <img src="img/bitmap-copy-16.jpg"
           srcset="img/bitmap-copy-16@2x.jpg 2x,
@@ -151,7 +163,7 @@
           <p class="err-message" id="emailErr">Please enter your email address</p>
           <button type="submit" id="subscribe">Subscribe</button>
           <div class="privacy-policy-wrapper">
-            <input type="checkbox" id="privacyPolicy"><p>I agree to the <a class="privacy-policy">Privacy Policy</a> and I am over 16 years of age</label>
+            <input type="checkbox" id="privacyPolicy"><p>I agree to the <a class="privacy-policy">Privacy Policy</a> and I am over 16 years of age</p>
           </div>
           <p class="err-message" id="privacyPolicyErr">Please agree to the privacy policy and minimum age</p>
         </form>
