Add arrow svg to show all categories button

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
     </div>
     <p class="err-message" id="catSelectErr">Please select at least one category above</p>
     <!-----------end of extra categories------------>
-      <button id="extraCategories">Show all categories<span></span></button>
+      <button class="extra-categories" id="extraCategories">Show all categories<span><img src="img/shape-copy-41.svg"
+        class="show-more-arrow"></span></button>
       <!----------newsletter signup form------------>
       <div class="newsletter-signup" id="newsletterSignup">
         <p>Join our newsletter so we can send you book recommendations</p>
