Fix privacy policy styling

--- a/index.html
+++ b/index.html
@@ -164,7 +164,11 @@
           <p class="err-message" id="emailErr">Please enter your email address</p>
           <button type="submit" id="subscribe">Subscribe</button>
           <div class="privacy-policy-wrapper">
-            <input type="checkbox" id="privacyPolicy"><p>I agree to the <a class="privacy-policy">Privacy Policy</a> and I am over 16 years of age</p>
+            <label class="privacy-policy-label">
+              <input type="checkbox" id="privacyPolicy">
+              <span></span>
+            </label>
+            <p>I agree to the <a class="privacy-policy">Privacy Policy</a> and I am over 16 years of age</p>
           </div>
           <p class="err-message" id="privacyPolicyErr">Please agree to the privacy policy and minimum age</p>
         </form>
