Add 768px breakpoint styles for main screen

--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
              img/bitmap-copy-7@3x.jpg 3x"
           class="Bitmap-Copy-7">
       </div>
-    <!--------div to contain extra categories hidden by default------>
-    <div class="extra-cat" id="extraCatContainer">
+    <!--------divs to contain extra categories hidden by default------>
       <!---------------food & drink---------------->
-      <div class="cat-selection">
+      <div class="cat-selection extra-cat" id="extraCat">
         <label for="foodDrink">
           <input type="checkbox" class="cat-select-check" id="foodDrink" name="food&drink">
           <span>Food & Drink</span>
@@ -60,7 +59,7 @@
           class="Bitmap-Copy-18">
       </div>
       <!-----------------gardening----------------->
-      <div class="cat-selection">
+      <div class="cat-selection extra-cat" id="extraCat">
         <label for="gardening">
           <input type="checkbox" class="cat-select-check" id="gardening" name="gardening">
           <span>Gardening</span>
@@ -71,7 +70,7 @@
           class="Bitmap-Copy-21">
       </div>
       <!---------------health & fitness-------------->
-      <div class="cat-selection">
+      <div class="cat-selection extra-cat" id="extraCat">
         <label for="healthFitness">
           <input type="checkbox" class="cat-select-check" id="healthFitness" name="health&fitness">
           <span>Health & Fitness</span>
@@ -82,7 +81,7 @@
           class="Bitmap-Copy-15">
       </div>
       <!--------------history & reference-------------->
-      <div class="cat-selection">
+      <div class="cat-selection extra-cat" id="extraCat">
         <label for="history">
           <input type="checkbox" class="cat-select-check" id="history" name="history&reference">
           <span>History & Reference</span>
@@ -93,7 +92,7 @@
           class="Bitmap-Copy-17">
       </div>
       <!----------------lego books------------------->
-      <div class="cat-selection">
+      <div class="cat-selection extra-cat" id="extraCat">
         <label for="lego">
           <input type="checkbox" class="cat-select-check" id="lego" name="lego">
           <span>LEGO&reg Books</span>
@@ -104,7 +103,7 @@
           class="Bitmap-Copy-20">
       </div>
       <!------------------marvel-------------------->
-      <div class="cat-selection">
+      <div class="cat-selection extra-cat" id="extraCat">
         <label for="marvel">
           <input type="checkbox" class="cat-select-check" id="marvel" name="marvel">
           <span>Marvel</span>
@@ -115,7 +114,7 @@
           class="Bitmap-Copy-14">
       </div>
       <!----------pregnancy & parenting----------->
-      <div class="cat-selection">
+      <div class="cat-selection extra-cat" id="extraCat">
         <label for="pregnancyParenting">
           <input type="checkbox" class="cat-select-check" id="pregnancyParenting" name="pregnancy&parenting">
           <span>Pregnancy & Parenting</span>
@@ -126,7 +125,7 @@
           class="Bitmap-Copy-19">
       </div>
       <!----------------star wars---------------->
-      <div class="cat-selection">
+      <div class="cat-selection extra-cat" id="extraCat">
         <label for="starWars">
           <input type="checkbox" class="cat-select-check" id="starWars" name="star-wars">
           <span>Star Wars&#8482</span>
@@ -137,7 +136,7 @@
           class="Bitmap-Copy-22">
       </div>
       <!----------------travel------------------>
-      <div class="cat-selection">
+      <div class="cat-selection extra-cat" id="extraCat">
         <label for="travel">
           <input type="checkbox" class="cat-select-check" id="travel" name="travel">
           <span>Travel</span>
@@ -147,9 +146,8 @@
              img/bitmap-copy-16@3x.jpg 3x"
           class="Bitmap-Copy-16">
       </div>
-    </div>
-    <p class="err-message" id="catSelectErr">Please select at least one category above</p>
-    <!-----------end of extra categories------------>
+      <p class="err-message" id="catSelectErr">Please select at least one category above</p>
+      <!-----------end of extra categories------------>
       <button class="extra-categories" id="extraCategories">Show all categories<span><img src="img/shape-copy-41.svg"
         class="show-more-arrow"></span></button>
       <!----------newsletter signup form------------>
