Add alt attributes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="img/bitmap-copy-2.jpg"
           srcset="img/bitmap-copy-2@2x.jpg 2x,
              img/bitmap-copy-2@3x.jpg 3x"
-          class="Bitmap-Copy-2">
+          class="Bitmap-Copy-2" alt="toy train">
       </div>
       <!---------------crafts & hobbies-------------->
       <div class="cat-selection">
@@ -33,7 +33,7 @@
         <img src="img/bitmap-copy-9.jpg"
           srcset="img/bitmap-copy-9@2x.jpg 2x,
              img/bitmap-copy-9@3x.jpg 3x"
-          class="Bitmap-Copy-9">
+          class="Bitmap-Copy-9" alt="buttons">
       </div>
       <!-------------education & teachers---------->
       <div class="cat-selection">
@@ -44,7 +44,7 @@
         <img src="img/bitmap-copy-7.jpg"
           srcset="img/bitmap-copy-7@2x.jpg 2x,
              img/bitmap-copy-7@3x.jpg 3x"
-          class="Bitmap-Copy-7">
+          class="Bitmap-Copy-7" alt="atom">
       </div>
     <!--------divs to contain extra categories hidden by default------>
       <!---------------food & drink---------------->
@@ -56,7 +56,7 @@
         <img src="img/bitmap-copy-18.jpg"
           srcset="img/bitmap-copy-18@2x.jpg 2x,
              img/bitmap-copy-18@3x.jpg 3x"
-          class="Bitmap-Copy-18">
+          class="Bitmap-Copy-18" alt="strawberries">
       </div>
       <!-----------------gardening----------------->
       <div class="cat-selection extra-cat" id="extraCat">
@@ -67,7 +67,7 @@
         <img src="img/bitmap-copy-21.jpg"
           srcset="img/bitmap-copy-21@2x.jpg 2x,
              img/bitmap-copy-21@3x.jpg 3x"
-          class="Bitmap-Copy-21">
+          class="Bitmap-Copy-21" alt="watering can">
       </div>
       <!---------------health & fitness-------------->
       <div class="cat-selection extra-cat" id="extraCat">
@@ -78,7 +78,7 @@
         <img src="img/bitmap-copy-15.jpg"
           srcset="img/bitmap-copy-15@2x.jpg 2x,
              img/bitmap-copy-15@3x.jpg 3x"
-          class="Bitmap-Copy-15">
+          class="Bitmap-Copy-15" alt="herbs">
       </div>
       <!--------------history & reference-------------->
       <div class="cat-selection extra-cat" id="extraCat">
@@ -89,7 +89,7 @@
         <img src="img/bitmap-copy-17.jpg"
           srcset="img/bitmap-copy-17@2x.jpg 2x,
              img/bitmap-copy-17@3x.jpg 3x"
-          class="Bitmap-Copy-17">
+          class="Bitmap-Copy-17" alt="artifact">
       </div>
       <!----------------lego books------------------->
       <div class="cat-selection extra-cat" id="extraCat">
@@ -100,7 +100,7 @@
         <img src="img/bitmap-copy-20.png"
           srcset="img/bitmap-copy-20@2x.png 2x,
              img/bitmap-copy-20@3x.png 3x"
-          class="Bitmap-Copy-20">
+          class="Bitmap-Copy-20" alt="lego logo">
       </div>
       <!------------------marvel-------------------->
       <div class="cat-selection extra-cat" id="extraCat">
@@ -111,7 +111,7 @@
         <img src="img/bitmap-copy-14.png"
           srcset="img/bitmap-copy-14@2x.png 2x,
              img/bitmap-copy-14@3x.png 3x"
-          class="Bitmap-Copy-14">
+          class="Bitmap-Copy-14" alt="marvel logo">
       </div>
       <!----------pregnancy & parenting----------->
       <div class="cat-selection extra-cat" id="extraCat">
@@ -122,7 +122,7 @@
         <img src="img/bitmap-copy-19.jpg"
           srcset="img/bitmap-copy-19@2x.jpg 2x,
              img/bitmap-copy-19@3x.jpg 3x"
-          class="Bitmap-Copy-19">
+          class="Bitmap-Copy-19" alt="baby">
       </div>
       <!----------------star wars---------------->
       <div class="cat-selection extra-cat" id="extraCat">
@@ -133,7 +133,7 @@
         <img src="img/bitmap-copy-22.jpg"
           srcset="img/bitmap-copy-22@2x.jpg 2x,
              img/bitmap-copy-22@3x.jpg 3x"
-          class="Bitmap-Copy-22">
+          class="Bitmap-Copy-22" alt="star wars logo">
       </div>
       <!----------------travel------------------>
       <div class="cat-selection extra-cat" id="extraCat">
@@ -144,7 +144,7 @@
         <img src="img/bitmap-copy-16.jpg"
           srcset="img/bitmap-copy-16@2x.jpg 2x,
              img/bitmap-copy-16@3x.jpg 3x"
-          class="Bitmap-Copy-16">
+          class="Bitmap-Copy-16" alt="dinosaur">
       </div>
       <p class="err-message" id="catSelectErr">Please select at least one category above</p>
       <!-----------end of extra categories------------>
